--- a/web/index.html
+++ b/web/index.html
@@ -99,7 +99,7 @@
             <i class="fa fa-shopping-cart fa-stack-1x"></i>
           </span>
           <h4 class="service-heading">envoltura</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">Empaquetamos tus contenidos dentro de una app. Audioguías, textos, mapas, fotos, fotos360. </p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
