--- a/web/index.html
+++ b/web/index.html
@@ -93,23 +93,23 @@
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-md-4 col-md-offset-2">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-shopping-cart fa-stack-1x"></i>
+            <i class="fa fa-archive fa-stack-1x"></i>
           </span>
           <h4 class="service-heading">envoltura</h4>
-          <p class="text-muted">Empaquetamos tus contenidos dentro de una app. Audioguías, textos, mapas, fotos, fotos360. </p>
+          <p class="text-muted">Empaquetamos tus contenidos dentro de una app offline: <b>Audioguías, revistas, fotos, videos, libros, mapas, fotos360</b> y más. Así tus contenidos acompañan a tus lectores más allá de la conectividad. De viaje, con mala señal, sin plan de datos o en modo avión.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-laptop fa-stack-1x"></i>
+            <i class="fa fa-bullseye fa-stack-1x"></i>
           </span>
           <h4 class="service-heading">enciclopiedra</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">Un sevidor offline configurado según tus necesidades, que sirve contenidos vía WiFi local. En escuelas, ventanillas de atención, plazas, museos y sitios arquelógicos: Tus usuarios navegan páginas web sin depender de una conexión.</p>
         </div>
-        <div class="col-md-4">
+        <!--div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-lock fa-stack-1x"></i>
@@ -117,7 +117,7 @@
           <h4 class="service-heading">wifi-sencillo</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
         </div>
-      </div>
+      </div-->
     </div>
   </section>
 
