--- a/web/index.html
+++ b/web/index.html
@@ -49,6 +49,9 @@
             <a href="#page-top"></a>
           </li>
           <li>
+            <a class="page-scroll" href="#about">About</a>
+          </li>
+          <li>
             <a class="page-scroll" href="#servicios">Servicios</a>
           </li>
           <li>
@@ -78,10 +81,24 @@
         <div class="intro-heading">
           Especialistas en escasa o nula conectividad<span class="blink-fast">∎</span>
         </div>
-        <a href="#servicios" class="page-scroll btn btn-xl">Qué?</a>
+        <a href="#about" class="page-scroll btn btn-xl">Qué?</a>
       </div>
     </div>
   </header>
+
+  <!-- About Section -->
+  <section id="about" class="quote">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading">
+            <i>Por que existe intranerds</i>
+          </h2>
+          <!-- <h3 class="section-subheading text-muted">Soluciones offline sólidas como la roca</h3> -->
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Services Section -->
   <section id="servicios">
