--- a/web/index.html
+++ b/web/index.html
@@ -387,38 +387,46 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading"></h2>
+          <h2 class="section-heading">Contacto</h2>
           <h3 class="section-subheading text-muted">&nbsp;</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <form name="sentMessage" id="contactForm" novalidate>
-            <div class="row">
+          <form name="sentMessage" id="contactForm"
+            action="https://formspree.io/kikomayorga+intranerds@gmail.com"
+            method="POST">
+            <div class="row inputs">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
+                  <input type="text" class="form-control"
+                    placeholder="Nombre" id="name" name="name">
+                  <!-- <p class="help-block text-danger"></p> -->
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
+                  <input type="email" class="form-control"
+                    placeholder="Email *" id="_replyto" name="_replyto" required>
+                  <!-- <p class="help-block text-danger"></p> -->
                 </div>
                 <div class="form-group">
-                  <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
+                  <input type="text" class="form-control"
+                    placeholder="Asunto" id="_subject" name="_subject">
+                  <!-- <p class="help-block text-danger"></p> -->
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
+                  <textarea class="form-control"
+                    placeholder="Mensaje *" id="message" name="message"
+                    required></textarea>
+                  <!-- <p class="help-block text-danger"></p> -->
                 </div>
               </div>
-              <div class="clearfix"></div>
+            </div>
+            <div class="row submit-btn">
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button type="submit" class="btn btn-xl">Send Message</button>
+                <button type="submit" class="btn btn-xl">Enviar</button>
               </div>
             </div>
           </form>
