foto mariano y texto intro

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -6,9 +6,9 @@
   {% include 'home/header.html' %}
   {% include 'home/about.html' %}
   {% include 'home/servicios.html' %}
-  {% include 'home/portafolio.html' %}
+  <!-- {% include 'home/portafolio.html' %} -->
   {% include 'home/equipo.html' %}
-  {% include 'home/clientes.html' %}
+  <!-- {% include 'home/clientes.html' %} -->
   {% include 'contacto.html' %}
 {% endblock %}
 
